# UntitledLang

./: Cargo.toml
res/concepts/: age.json  person.json
res/phonetics/: ae.json
res/traits/: aged.json
src/: loader.rs  main.rs
src/concept/: mod.rs
src/phonetics/: mod.rs
src/traits/: mod.rs
